--- a/main.css
+++ b/main.css
@@ -3,12 +3,35 @@
     background-color: rgb(0, 160, 255);
     background-image: url("img/pattern.png");
     height: 100px;
-    background-size: 50%;
+    background-size: 40%;
     background-repeat: repeat-x;
 
 }
 
 .logo{
-    width: 250px;
+    width: 230px;
+    padding-top: 40px;
 }
 
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+}
+
+.grigio{
+    color: gray;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+}
+
+.blu{
+    color: rgb(0, 160, 255);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+}
+
+.data{
+    color: gray;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
