--- a/main.css
+++ b/main.css
@@ -10,12 +10,17 @@
 
 .logo{
     width: 230px;
-    padding-top: 40px;
+    padding-top: 37px;
 }
 
 h1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
+}
+
+.testo-normale{
+     color: black;
+    font-size: 14px;
 }
 
 .grigio{
@@ -34,4 +39,17 @@ h1{
     color: gray;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
+}
+
+.descrizione-1{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+}
+
+.evidenziato{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    background-color: yellow;
 }
