--- a/main.css
+++ b/main.css
@@ -54,3 +54,27 @@ h1{
     background-color: yellow;
 }
 
+.riga1{
+    background-color: rgb(0, 160, 255);
+    color: aliceblue;
+    width: 1000px;
+    text-align: left;
+}
+
+.riga2{
+    background-color: rgb(183, 226, 255);
+    color: black;
+    width: 1000px;
+    text-align: left;
+}
+
+.riga3{
+    background-color:white;
+    color: black;
+    width: 1000px;
+    text-align: left;
+}
+
+table {
+  border-collapse: collapse;
+}
