--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+/* spazio tra destra e sinistra e centramento pagina */
+main, footer{
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
 /* creazione header con logo  */
 .header-sfondo{
     background-color: rgb(0, 160, 255);
@@ -5,14 +11,15 @@
     height: 100px;
     background-size: 40%;
     background-repeat: repeat-x;
-
 }
 
 .logo{
     width: 230px;
     padding-top: 37px;
+    padding-left: 105px;
 }
 
+/* creazione vari tipi di testo */
 h1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
@@ -47,6 +54,7 @@ h1{
     font-size: 17px;
 }
 
+/* creazione parte evidenziata */
 .evidenziato{
     color: black;
     font-family: Arial, Helvetica, sans-serif;
@@ -54,6 +62,7 @@ h1{
     background-color: yellow;
 }
 
+/* creazione tabella */
 .riga1{
     background-color: rgb(0, 160, 255);
     color: aliceblue;
@@ -77,4 +86,29 @@ h1{
 
 table {
   border-collapse: collapse;
+}
+
+/* creazione footer */
+h4{
+    color: grey;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
+}
+
+.testo-immagine1{
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    color: aliceblue;
+    font-size: 24px;
+    top: 1590px;
+    left: 159px;
+}
+
+.testo-immagine2{
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    color: aliceblue;
+    font-size: 24px;
+    top: 1820px;
+    left: 159px;
 }
